Comboboxes weren't rendering properly on IE7. This appears to fix it
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/3.8/trunk@18348 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/msie.css
+++ b/share/html/NoAuth/css/web2/msie.css
@@ -215,6 +215,11 @@ table.queue-summary td, td.collection-as-table {
 .titlebox .titlebox .titlebox-title .right{
     top: 0.25em;
 }
+
+.combobox {
+    float: left;
+}
+
 .combobox .combo-button {
     color: ButtonText;
     padding: 0;
